# PhotoForge

./: .gitignore  CHANGELOG.md  README.md  SPEC.md  SPEC_v0.1.md  SPEC_v0.2.md  SPEC_v0.3.md  pyproject.toml  requirements.txt
ProjectDocs/: CHANGELOG.md  ChatGPT-rules.md  architecture.md  backlog.md  cli.md  development-workflow.md  documentation-validation.md  documentation-validation.spec.yaml  exif.md  grouping.md  hashing.md  implementation-plan.md  model.md  operations.md  planner-core.md  planner.md  reporter.md  scanner.md  scanner_v0.2.md  standard-agent-prompt.md  version.md
ProjectDocs/00-system-documentation/: cli.md  documentation-validation.md  grouping.md  implementation-plan.md  metadata-extraction-layer.md  metadata.md  model.md  pipeline.md  reporter.md
ProjectDocs/01-backlog/: backlog.md
ProjectDocs/02-version-scope/: v000.004-planning-proposal.md  v000.006-planning-proposal.md  v000.007-planning-proposal.md
ProjectDocs/03-scope-approval/: v000.005-planning-proposal.md  v000.006-scope-approval.md  v000.007-scope-approval.md  v000.007-scope-refinement-addendum.md
ProjectDocs/04-requirements/: v000.006-requirements.md  v000.007-requirements.md
ProjectDocs/templates/: README.md  (+9 more)
scripts/: create_milestone_files.py  create_version_files.py  dev_export.py  generate_e2e_golden.py  list_e2e_fixtures.py  verify_e2e_golden.py
tests/: test_exif_diagnostics.py  test_filename_extractor.py  test_filesystem_extractor.py  test_folder_extractor.py  test_metadata.py  test_timestamp_comparison.py  test_timestamp_diagnostics.py  test_timestamp_resolution.py
(+134 files in other folders)
